# Cogger

./: .gitignore  CMakeLists.txt  License  Readme.md
src/demo/: CMakeLists.txt  CoggerDemo.cc
src/lib/: CMakeLists.txt  Cogger.cc  Cogger.h  LogTypes.h
